# AI_Math_Solver

./: .env.example  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c3be92a490fe_initial.py
backend/models/: __init__.py  problem.py  tag.py
backend/routers/: problems.py  tags.py  upload.py
backend/schemas/: __init__.py  error.py  problem.py  tag.py
backend/services/: ai_service.py
backend/tests/: conftest.py  test_ai_service.py  test_edge_cases.py  test_problems.py  test_tags.py  test_upload.py
docs/issues/: issue-27.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  auth.ts  biome.json  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/.github/workflows/: biome.yml
frontend/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/app/api/: route.ts
frontend/app/problems/: loading.tsx  page.tsx
frontend/app/tags/: page.tsx  (+1 more)
frontend/components/: auth-provider.tsx  error-boundary.tsx  features-section.tsx  header.tsx  hero-section.tsx  image-upload.tsx  problem-card.tsx  problem-filters.tsx  solution-display.tsx  tag-card.tsx  tag-input.tsx  upload-form.tsx  user-auth-form.tsx
frontend/lib/: api.ts  mock-data.ts
(+12 files in other folders)
