[project]
name = "ai-math-solver-backend"
version = "0.1.0"
description = "Backend for the AI Math Solver application."
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic-settings",
    "python-multipart",
    "pillow",
    "boto3",
    "openai",
    "alembic",
]

[tool.uv]
# You can add uv-specific configuration here if needed in the future.